Clean up login activity. Pass token to op activity.

--- a/app/src/main/res/layout/activity_op.xml
+++ b/app/src/main/res/layout/activity_op.xml
@@ -9,4 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.netapp.scotch.OpActivity">
 
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/token_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
