Fix derp. Add clear token preference.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -12,5 +12,10 @@
             android:singleLine="true"
             android:title="@string/pref_title_cloud_server_endpoint" />
 
+        <com.netapp.scotch.ClearTokenPreference
+            android:key="clear_token"
+            android:title="Clear token?"
+            android:dialogTitle="Clear token?" />
+
     </PreferenceCategory>
 </PreferenceScreen>
