--- a/app/src/main/res/layout/workspace_list_item.xml
+++ b/app/src/main/res/layout/workspace_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent" >
 
     <android.support.v7.widget.CardView
-        android:id="@+id/vsim_list_item"
+        android:id="@+id/workspace_list_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
@@ -20,14 +20,14 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/vsim_name"
+                android:id="@+id/workspace_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:textSize="@dimen/abc_text_size_medium_material" />
 
             <TextView
-                android:id="@+id/vsim_id"
+                android:id="@+id/workspace_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
